[package]
name = "qemu-m7"
version = "0.1.0"
edition = "2024"

[dependencies]
mavlink = { path = "../../mavlink" }
defmt = "1.0.1"
defmt-semihosting = "0.1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-semihosting = "0.6"
heapless = { version = "0.9", default-features = false }
