[package]
name = "qemu-m7"
version = "0.1.0"
edition = "2024"

[dependencies]
mavlink = { path = "../../mavlink" }
defmt = "1.0.1"
defmt-semihosting = { version = "0.3.0", optional = true }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-semihosting = { version = "0.6", optional = true }
panic-halt = { version = "1.0.0" }

heapless = { version = "0.9", default-features = false }

[features]
default = ["logging"]
logging = ["dep:defmt-semihosting", "dep:panic-semihosting"]
