[package]
name = "stm32c092rc"
version = "0.1.0"
edition = "2024"

[dependencies]
mavlink = { path = "../../mavlink" }
defmt = "1.0.1"
defmt-rtt = { version = "1.0.0", optional = true }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
panic-halt = { version = "1.0.0" }
heapless = { version = "0.9", default-features = false }

[features]
default = ["logging"]
logging = ["dep:defmt-rtt", "dep:panic-probe"]
